doc/0.97/_sources/api-reference.rst.txt
.. _api_reference:

API Reference
=============

.. toctree::
   :maxdepth: 1

   reference/get-ad
   reference/get-ad-id
   reference/get-ad-vendor-id
   reference/get-ad-id-funnel
   reference/post-ad
   reference/put-ad-id
   reference/put-ad-id-status
   reference/get-budget-seller
   reference/get-categories
   reference/get-category
   reference/get-category-id
   reference/get-category-id-attributes
   reference/get-category-id-funnel
   reference/get-feed-config
   reference/post-feed-config
   reference/get-feed-import
   reference/get-feed-import-id-detail
   reference/get-feed-import-id-detail-vendor-id
   reference/get-feed-xsd
   reference/get-image
   reference/post-image
   reference/get-region-id
   reference/get-regions
   reference/get-report
   reference/get-report-detail
   reference/get-report-detail-id
   reference/post-report-detail
   reference/get-report-summary
   reference/get-user
   reference/ad-status
   reference/price-types
   reference/error-codes

